--- a/index.html
+++ b/index.html
@@ -56,9 +56,13 @@
     </main>
    
     <footer>
-      <div class="location">
-        <p>México</p>
-      </div>
+       <section>
+                                                                                                                        
+          <div class="location">
+            <p>México</p>
+          </div>
+       </section>
+       <section>
       <div class="google-activites">
         <ul>
           <li><a href="#">Sóbre Google</a></li>
@@ -72,6 +76,7 @@
           <li><a href="#">Preferencias</a></li>
         </ul>
       </div>
+      </section>
     </footer>
   </body>
 </html>
